tenant-manifests/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - port: 8080
  selector:
    app: nginx
